--- a/ui/index.html
+++ b/ui/index.html
@@ -110,6 +110,15 @@
         <div id="search-results" class="mt-3 grid grid-cols-1 sm:grid-cols-3 gap-3 hidden"></div>
       </div>
 
+<!-- Top Insights -->
+<div class="bg-white rounded-2xl border shadow p-4 mb-3">
+  <div class="text-base font-semibold mb-2">Top Insights for Ops</div>
+  <ul id="insights" class="text-sm text-gray-800 list-disc pl-5 space-y-1">
+    <li>Loading…</li>
+  </ul>
+  <div id="insights-mini" class="mt-2 text-xs text-gray-500"></div>
+</div>
+
       <!-- PO Progress -->
       <div class="bg-white rounded-2xl border shadow p-4 mb-3">
         <div class="text-base font-semibold mb-2">PO Progress (This Week)</div>
@@ -320,19 +329,30 @@
   }
 
   // ---------- Dashboard render ----------
-  function renderPOProgress(rows){
-    const b=$('#po-progress-body'); b.innerHTML='';
-    if(!rows.length){b.innerHTML='<tr><td colspan="5" class="text-center text-xs text-gray-400 py-3">No data</td></tr>'; return;}
-    rows.forEach(r=>{
-      const tr=document.createElement('tr'); tr.className='odd:bg-gray-50';
-      tr.innerHTML=`<td class="py-1 pr-2">${r.po}</td>
-                    <td class="py-1 pr-2">${r.due?r.due.split('-').reverse().join('-'):''}</td>
-                    <td class="py-1 pr-2 text-right tabular-nums">${fmtInt(r.planned)}</td>
-                    <td class="py-1 pr-2 text-right tabular-nums">${fmtInt(r.applied)}</td>
-                    <td class="py-1 text-right tabular-nums">${r.pct}%</td>`;
-      b.appendChild(tr);
-    });
+  function computeRisk(rows){
+  // Show top items with remaining > 0, regardless of week end
+  const out = [];
+  for (const r of rows || []) {
+    const planned = Number(r.planned || 0);
+    const applied = Number(r.applied || 0);
+    const remaining = Math.max(0, planned - applied);
+    if (remaining > 0) {
+      out.push({
+        key: r.po || r.sku || r.key,
+        due_date: r.due || r.due_date || '',
+        planned,
+        applied,
+        remaining,
+        pct: planned > 0 ? Math.round((applied / planned) * 100) : 0,
+      });
+    }
   }
+  // Prioritize by remaining qty, then earliest due date if available
+  out.sort((a, b) => b.remaining - a.remaining ||
+                     (new Date(a.due_date || '9999-12-31')) -
+                     (new Date(b.due_date || '9999-12-31')));
+  return out.slice(0, 5);
+}
   function renderRisk(list, id){
     const b=$(id); b.innerHTML='';
     if(!list.length){b.innerHTML='<tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">No items at risk this week.</td></tr>'; return;}
@@ -442,6 +462,9 @@
     const riskSKU = computeRisk(skuRows, we);
     renderRisk(riskPO,'#risk-po-body');
     renderRisk(riskSKU,'#risk-sku-body');
+
+// 👉 add/keep this:
+renderInsights(state.records);
 
     // download buttons
     $('#btn-dl-posku').onclick=()=>{
