--- a/ui/index.html
+++ b/ui/index.html
@@ -119,60 +119,69 @@
   <div id="insights-mini" class="mt-2 text-xs text-gray-500"></div>
 </div>
 
-      <!-- PO Progress -->
-      <div class="bg-white rounded-2xl border shadow p-4 mb-3">
-        <div class="text-base font-semibold mb-2">PO Progress (This Week)</div>
-        <div class="overflow-auto max-h-[480px]">
-          <table class="w-full text-sm" id="po-progress">
-            <thead>
-            <tr class="text-gray-500">
-              <th class="text-left py-1 pr-2">PO #</th>
-              <th class="text-left py-1 pr-2">Due</th>
-              <th class="text-right py-1 pr-2">Planned</th>
-              <th class="text-right py-1 pr-2">Applied</th>
-              <th class="text-right py-1">%</th>
-            </tr>
-            </thead>
-            <tbody id="po-progress-body"><tr><td colspan="5" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr></tbody>
-          </table>
-        </div>
-      </div>
+<!-- PO Progress (This Week) -->
+<div class="bg-white rounded-2xl border shadow p-4 mb-3">
+  <div class="text-base font-semibold mb-2">PO Progress (This Week)</div>
+  <div class="overflow-auto max-h-[480px]">
+    <table class="w-full text-sm" id="po-progress">
+      <thead>
+        <tr class="text-gray-500">
+          <th class="text-left py-1 pr-2">PO #</th>
+          <th class="text-left py-1 pr-2">Due</th>
+          <th class="text-right py-1 pr-2">Planned</th>
+          <th class="text-right py-1 pr-2">Applied</th>
+          <th class="text-right py-1">%</th>
+        </tr>
+      </thead>
+      <tbody id="po-progress-body">
+        <tr><td colspan="5" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
       <!-- Risks -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-3">
-        <div class="bg-white rounded-2xl border shadow p-4">
-          <div class="text-base font-semibold mb-2">Top PO's at Risk</div>
-          <table class="w-full text-sm" id="risk-po">
-            <thead>
-            <tr class="text-gray-500">
-              <th class="text-left py-1 pr-2">PO #</th>
-              <th class="text-left py-1 pr-2">Due</th>
-              <th class="text-right py-1 pr-2">Planned</th>
-              <th class="text-right py-1 pr-2">Applied</th>
-              <th class="text-right py-1 pr-2">Rem</th>
-              <th class="text-right py-1">%</th>
-            </tr>
-            </thead>
-            <tbody id="risk-po-body"><tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr></tbody>
-          </table>
-        </div>
-        <div class="bg-white rounded-2xl border shadow p-4">
-          <div class="text-base font-semibold mb-2">Top SKU's at Risk</div>
-          <table class="w-full text-sm" id="risk-sku">
-            <thead>
-            <tr class="text-gray-500">
-              <th class="text-left py-1 pr-2">SKU</th>
-              <th class="text-left py-1 pr-2">Due</th>
-              <th class="text-right py-1 pr-2">Planned</th>
-              <th class="text-right py-1 pr-2">Applied</th>
-              <th class="text-right py-1 pr-2">Rem</th>
-              <th class="text-right py-1">%</th>
-            </tr>
-            </thead>
-            <tbody id="risk-sku-body"><tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr></tbody>
-          </table>
-        </div>
-      </div>
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-3">
+  <!-- Top PO's at Risk -->
+  <div class="bg-white rounded-2xl border shadow p-4">
+    <div class="text-base font-semibold mb-2">Top PO's at Risk</div>
+    <table class="w-full text-sm">
+      <thead>
+        <tr class="text-gray-500">
+          <th class="text-left py-1 pr-2">PO #</th>
+          <th class="text-left py-1 pr-2">Due</th>
+          <th class="text-right py-1 pr-2">Planned</th>
+          <th class="text-right py-1 pr-2">Applied</th>
+          <th class="text-right py-1 pr-2">Rem</th>
+          <th class="text-right py-1">%</th>
+        </tr>
+      </thead>
+      <tbody id="risk-po-body">
+        <tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Top SKU's at Risk -->
+  <div class="bg-white rounded-2xl border shadow p-4">
+    <div class="text-base font-semibold mb-2">Top SKU's at Risk</div>
+    <table class="w-full text-sm">
+      <thead>
+        <tr class="text-gray-500">
+          <th class="text-left py-1 pr-2">SKU</th>
+          <th class="text-left py-1 pr-2">Due</th>
+          <th class="text-right py-1 pr-2">Planned</th>
+          <th class="text-right py-1 pr-2">Applied</th>
+          <th class="text-right py-1 pr-2">Rem</th>
+          <th class="text-right py-1">%</th>
+        </tr>
+      </thead>
+      <tbody id="risk-sku-body">
+        <tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">Loading…</td></tr>
+      </tbody>
+    </table>
+  </div>
+</div>
     </section>
 
     <!-- ================= UID Intake ================= -->
@@ -423,6 +432,75 @@
       </table>
     </div>`;
   }
+
+// ----- PO Progress table -----
+function renderPOProgress(rows){
+  const tbody = document.getElementById('po-progress-body');
+  if (!tbody) return;
+  tbody.innerHTML = '';
+
+  if (!rows || !rows.length){
+    tbody.innerHTML = '<tr><td colspan="5" class="text-center text-xs text-gray-400 py-3">No data</td></tr>';
+    return;
+  }
+
+  rows.forEach(r => {
+    const tr = document.createElement('tr');
+    tr.className = 'odd:bg-gray-50';
+    tr.innerHTML = `
+      <td class="py-1 pr-2">${r.po}</td>
+      <td class="py-1 pr-2">${r.due ? r.due.split('-').reverse().join('-') : ''}</td>
+      <td class="py-1 pr-2 text-right tabular-nums">${(r.planned||0).toLocaleString()}</td>
+      <td class="py-1 pr-2 text-right tabular-nums">${(r.applied||0).toLocaleString()}</td>
+      <td class="py-1 text-right tabular-nums">${r.pct||0}%</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+
+// ----- Risk tables (PO / SKU) -----
+function renderRisk(list, selector){
+  const tbody = document.querySelector(selector);
+  if (!tbody) return;
+  tbody.innerHTML = '';
+
+  if (!list || !list.length){
+    tbody.innerHTML = '<tr><td colspan="6" class="text-center text-xs text-gray-400 py-3">No items at risk this week.</td></tr>';
+    return;
+  }
+
+  list.forEach(r => {
+    const tr = document.createElement('tr');
+    tr.className = 'odd:bg-gray-50';
+    tr.innerHTML = `
+      <td class="py-1 pr-2 truncate" title="${r.key||r.po||''}">${r.key||r.po||''}</td>
+      <td class="py-1 pr-2">${r.due_date ? r.due_date.split('-').reverse().join('-') : ''}</td>
+      <td class="py-1 pr-2 text-right tabular-nums">${(r.planned||0).toLocaleString()}</td>
+      <td class="py-1 pr-2 text-right tabular-nums">${(r.applied||0).toLocaleString()}</td>
+      <td class="py-1 pr-2 text-right tabular-nums">${(r.remaining||0).toLocaleString()}</td>
+      <td class="py-1 text-right tabular-nums">${r.pct||0}%</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+
+// ----- Insights tile (simple summary) -----
+function renderInsights(records){
+  const ul = document.getElementById('insights');
+  const mini = document.getElementById('insights-mini');
+  if (!ul) return;
+
+  const completed = (records||[]).filter(r => r.status === 'complete').length;
+  const drafts    = (records||[]).filter(r => r.status !== 'complete').length;
+
+  ul.innerHTML = `
+    <li>Applied (this week): <strong>${completed.toLocaleString()}</strong></li>
+    <li>Drafts: <strong>${drafts.toLocaleString()}</strong></li>
+  `;
+  if (mini) mini.textContent = `On plan · drafts ${drafts.toLocaleString()}`;
+}
+
+
 
   // ---------- setWeek ----------
   async function setWeek(ws){
