--- a/ui/index.html
+++ b/ui/index.html
@@ -40,17 +40,17 @@
         <div id="vo-today" class="text-gray-500 text-sm"></div>
       </div>
       <nav class="flex items-center gap-2">
-        <a href="#dashboard" id="nav-dash"   class="px-3 py-2 rounded-lg text-sm font-medium border border-rose-700 text-rose-700">Active Plan</a>
+        <a href="#dashboard" id="nav-dash"   class="px-3 py-2 rounded-lg text-sm font-medium border border-rose-700 text-rose-700">Operations</a>
         <a href="#intake"    id="nav-intake" class="px-3 py-2 rounded-lg text-sm font-medium border border-rose-700 text-rose-700/80">Intake</a>
       </nav>
     </div>
   </header>
 
   <main class="container py-4">
-    <!-- ================= Active Plan ================= -->
+    <!-- ================= Operations ================= -->
     <section id="page-dashboard" class="hidden">
       <div class="flex items-center justify-between mb-2">
-        <div class="text-2xl font-semibold">Active Plan</div>
+        <div class="text-2xl font-semibold">Operations</div>
         <div class="flex items-center gap-2">
           <label class="text-sm text-gray-600">Week start</label>
           <input id="week-start" type="date" class="px-2 py-1 border rounded-md text-sm"/>
